# rfutil

./: .editorconfig  .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  rustfmt.toml
crates/desc/: Cargo.toml  README.md
crates/desc-lib/: Cargo.toml  Justfile
crates/desc-lib/src/: authors.rs  database_references.rs  desc.rs  edit.rs  fields.rs  lib.rs  reader.rs  references.rs  rna_type.rs  secondary_structure.rs  seed_evidence.rs  writer.rs
crates/desc/src/: cli.rs  main.rs
crates/infernal/: Cargo.toml
crates/infernal/src/: align.rs  lib.rs  tableout.rs
crates/infernal/src/align/: alignment.rs  alignments.rs  fragment.rs  hit_alignment.rs  summary.rs
crates/infernal/src/tableout/: inclusion.rs  model_type.rs  one_based_range.rs  overlap_stats.rs  overlap_status.rs  overlaps.rs  reader.rs  sequence_range.rs  strand.rs  traits.rs  truncation.rs  v1.rs  v2.rs  v3.rs
crates/infernal/tests/: lib.rs  tableout_parsing_test.rs
crates/infernal/tests/files/: table-v1.txt  table-v2.txt  table-v3.txt
crates/ols-api/: Cargo.toml  README.md
crates/ols-api/.openapi-generator/: FILES
crates/ols-api/docs/: EntityModelV1Individual.md  EntityModelV1Ontology.md  EntityModelV1Property.md  EntityModelV1Term.md  HealthCheckControllerApi.md  IndividualControllerApi.md  Link.md  OntologyControllerApi.md  OntologyIndividualControllerApi.md  OntologyPropertyControllerApi.md  OntologyTermControllerApi.md  PagedModelV1Individual.md  PagedModelV1Ontology.md  PagedModelV1Property.md  PagedModelV1Term.md  PropertyControllerApi.md  SearchControllerApi.md  SelectControllerApi.md  SuggestControllerApi.md  TermsControllerApi.md  V1Individual.md  V1OboXref.md  (+6 more)
crates/rfam/: Cargo.toml
crates/rfam/src/: family.rs
crates/rfam/src/family/: desc.rs  files.rs  ncbi_tax.rs  outlist.rs  rna_type.rs  scores.rs  sequence_kind.rs  species.rs
crates/rfam/src/family/desc/: database_references.rs  desc_file.rs  fields.rs  reader.rs  references.rs  writer.rs
crates/rfam/tests/family/: desc.rs
crates/rfam/tests/family/desc/: parsing_tests.rs
(+37 files in other folders)
