[package]
name = "desc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardet = "0.2.4"
derive_builder = "0.12.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
non-empty-string = "0.2.3"
nonempty = "0.8.1"
serde = { version = "^1", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
textwrap = "0.16.0"
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.22.0"
tempfile = "3.12.0"
